SERVER-30249 wait for the signing keys to be available in mongos at startup